--- a/pom.xml
+++ b/pom.xml
@@ -185,12 +185,19 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility-kotlin</artifactId>
+            <version>${awaitility.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <properties>
         <kotlin.version>1.3.72</kotlin.version>
         <spek.version>2.0.9</spek.version>
         <org-json.version>20190722</org-json.version>
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
+        <awaitility.version>4.0.2</awaitility.version>
         <dokka-maven-plugin.version>0.10.1</dokka-maven-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
